# NNTU_INF

./: .gitignore  CMakeLists.txt  CMakeSettings.json  NNTU_INF.code-workspace  README.md  TODO.txt  vcpkg.json
!lib/sqlite3/: shell.c  sqlite3.h
1/!Task/: Оформление котрольной работы.docx
1/!Task 24RZ/Задания_КонтролРабота_22-Рз_/: алгоритмы.pptx
1/!Task 24RZ/Лекции/: Lect_2_c_basic.pptx  Lect_5_function.pptx
1/!Task/Задания_КонтролРабота_22-Рз_/: челы.docx
1/!Task/Лекции/: Lect_0_coursereview.pptx  Lect_1_c_introduction.pptx  Lect_3_c_control.pptx  Lect_4_c_pointers_array.pptx  Lect_6_structure.pptx
1/1.1/: 1.c
1/1.10/: 10.c
1/1.11/: 11.c
1/1.12/: 12.c
1/1.13/: 13.c
1/1.14/: 14.c
1/1.15/: 15.c
1/1.2/: 2.c
1/1.4/: 4.c
1/1.5/: 5.c
1/1.6/: 6.c
1/1.7/: 7.c  diagram(10).json
1/1.8/: 8.c  diagram(11).json
1/1.9/: 9.c
1/1.Test/: Test.c
1/2025/16/: diagram.json  header.h  main.cpp  Отчет 16.docx
1/2025/36/: diagram-2.json  header.h  main.cpp  Отчет 36.docx
1/Egorov/: !TODO.txt  .~lock.ОТЧЕТ.docx#  1.c  TODO.txt  ОТЧЕТ.docx  ОТЧЕТ_Егоров.docx
1/Egorov/!TASK/: .~lock.Варианты_КонтролРабота_24Рз.docx#  .~lock.Оформление котрольной работы.docx#  Варианты_КонтролРабота_24Рз.docx  Оформление котрольной работы.docx
1/Egorov/1/: 1.c  1.h  diagram.json
1/Egorov/1EZ/: diagram.json
1/Egorov/2.1/: 2.1.c  diagram.json
1/Egorov/2.2/: diagram.json
1/Egorov/3/: 3.c  diagram.json
1/Egorov/4/: 4-functions.h  4-input.c  4-output.c  diagram.json
1/MY/1.12/: 12.c
1/MY/1.3/: 3.c
1/MY/1.5/: 5.c
1/MY/1.9/: 9.c
1/MY/1.Test/: Test.c
1/Mans/: .~lock.ОТЧЕТ_М.docx#  ОТЧЕТ_М.docx
1/Mans/2.1/: 2.1.c  diagram.json
1/Mans/2.2/: 2.2.c  diagram (1).json
1/Mans/3/: 3.c
1/Mans/4a/: 4a.c  4a.h
1/Mans/4p/: 4p.c  4p.h
1/Mans/5a/: 5a.c  5a.h
1/Mans/5p/: 5p.c  5p.h
1/Sedyx/: !TODO  ОТЧЕТ_Седых.docx
1/Sedyx/1/: 1.c  diagram.json
1/Sedyx/2-1/: 2-1.c  diagram (1).json
1/Sedyx/2-2/: 2-2.c  diagram.json
1/Sedyx/3/: 3.c
1/Sedyx/4a/: 4a-header.h  4a-input.c  4a-main.c  4a-output.c  4a-process.c
1/Sedyx/4p/: 4p-header.h  4p-input.c  4p-main.c  4p-output.c  4p-process.c
1/Sedyx/5a/: 5a-header.h  5a-input.c  5a-main.c  5a-output.c  5a-process.c
1/Sedyx/5p/: 5p-header.h  5p-input.c  5p-main.c  5p-output.c  5p-process.c
1/Tinakov/2.1/: 2.1.c  diagram(15).json
1/Tinakov/2.2/: diagram(14).json  Алгоритм 2.2.json
1/Vor/: ОТЧЕТ_Воробьев.docx
1/Vor/1/: 1.c  diagram (3).json
1/Vor/2-1/: 2-1.c  diagram.json
1/Vor/2-2/: 2-2.c  diagram (1).json
1/Vor/3/: 3.c
1/Vor/4a/: 4a.c  4a.h
1/Vor/4p/: 4p.c  4p.h
1/Vor/5a/: 5a.h
1/Vor/5p/: 5p.c  5p.h
2/1/: diagram_1.json  diagram_2.json  drafting.c  train.c  train.h  train_test.c  Отчет_1.docx
2/2.1/: 1.c  array.c  countrylist.txt  data.h  diagram(20).json  diagram.json  diagram2.json  master.c  master.db  tempCountriesArea  tempCountriesArea.txt  tempCountriesContinents.txt  tempCountriesPopulation  tempCountriesPopulation.txt  test.db
2/2.1 cpp edition/: data.h
2/2.1ch/: array.c  index.c  struct.h
2/2.1g/: main.c  programs.c  programs.h
2/2.1novoselov/: 01. Бахметьев.c  02. Бекетов.c  20. Оразов.c
2/2.1t/: array.c  data.h  diagram(37).json  diagram(38).json  diagram(39).json  main.c
2/2.2/: master.cpp
2/31/: 31.c  circle.c  circle.h  circle_test.c  diagram.json  Отчет31.docx
2/5/: coin.c  coin.h  coin_test.c  diagram.json  Отчет_5.docx
2/9/: ch.c  diagram-2.json  main.c  Отчет.docx
2/Lab1/: 1.1.c  1.2.c  1.3.c  2.1.c  2.2.c  2.3.c  2.4.c  3.1.c  3.2.c  test.c
3/: test.cpp
3/1/: application.cpp  application.h  main.cpp
3/2/: application.cpp  application.h  handler.cpp  handler.h  main.cpp
3/27/: .~lock.Отчет 27.odt#  application.cpp  application.h  buffer.cpp  cartesian.cpp  cartesian.h  main.cpp  Отчет 27.odt
3/27/COMMENTS/: application.cpp  application.h  cartesian.cpp  cartesian.h  main.cpp
3/3.14DOR/: application.cpp  application.h  main.cpp  vector.cpp  vector.h
3/3_my/: 3_my.cpp
3/3_my-31/FINAL/: application.cpp  main.cpp
3/3_my-31/att/: processing.cpp
3/3_my-31/solve/: IrNumber.h  application.h
3/3_my-31/v0.2/: 3_my_v0.2.cpp
3/3_my/att/: header.h  main.cpp  processing.cpp
3/3_my/solve/: IrNumber.h  application.cpp  application.h  header.h  initVector.cpp  main.cpp  processing.cpp  (+1 more)
3/41-23-Kornilov/: .~lock.Отчет 41.odt#  application.cpp  application.h  diagram.json  diagramBIG.json  main.cpp  vector_handle.cpp  vector_handle.h  Отчёт Корнилов Егор 23-РЗ-1.odt  Отчет 41.odt
3/6/: .~lock.Отчет 6.odt#  app_begin.cpp  app_end.cpp  app_process.cpp  application.cpp  application.h  diagram (1).json  main.cpp  vector.cpp  vector.h  Отчет 6.odt  Отчет_Системное_программирование_Шувалов_Д_М_.docx
3/ROMYCH/: application.cpp  application.h  counting.cpp  counting.h  replacement.cpp
3/gor/: application.h  vector.cpp  vector.h
3/gor-7/: application.cpp  sorting.cpp
4/1/: 1.docx  1.docx~RF9b6ee4.TMP
4/10/: .~lock.10.docx#  10.docx  10.docx~RF83e12b.TMP
4/13/: .~lock.13.docx#  13.docx
4/18/: .~lock.18.docx#  18.docx
4/41/: .~lock.41.docx#  41.docx
4/43/: .~lock.43.docx#  43.docx
4/My/: .~lock.otchot.docx#  otchot.docx
4/My/Inductance_V4/: CMakeLists.txt  TEST_NEW.cpp  application.cpp  application.h  predicator.cpp  predicator.h  testfile.txt
4/My/Inductance_V4/GODBLESS/: application.cpp  main.cpp
4/My/Inductance_V4/GODBLESS/AMEN/: application.cpp  main.cpp
4/My/Inductance_V4/SIDOR_GNIDA/EBAL_EGO_MERTVUJU_MAMAWU/: application.h  main.cpp
4/My/Inductance_V4/SIDOR_GNIDDA/: application.h  test.cpp
4_Practice_1/My/: .~lock.Форма отчета 22-Рз.doc#  22-Рз_Наумов.doc  22-Рз_Наумов_EDIT.doc  LAB.c  LAB2.c  TASK.txt  application.c  application.h  array_end_locations.txt  array_start_locations.txt  diagram.json  handler.c  handler.h  main.c  Форма отчета 22-Рз.doc
4_Practice_1/Roma/: application.c  application.h  library.c  library.h  main.c
C/: CMakeLists.txt
C/1/Tinakov/1/: Алгоритм 1.json
C/1/Tinakov/2.1/: Алгоритм 2.1.json
C/1/Tinakov/2.2/: 2.2.c
C/2/2.1/: 1.c  master.db  tempCountriesContinents.txt
(+257 files in other folders)
