cmake_minimum_required(VERSION 3.23)
project(NNTU C)

set(CMAKE_C_STANDARD 99)

# 1 course / 1 semester

#add_executable(test "1/1.Test/Test.c")
#add_executable(1.1 "1/1.1/1.c")
#add_executable(1.2 "1/1.2/2.c")
#add_executable(1.3 "1/1.3/3.c")
#add_executable(1.4 "1/1.4/4.c")
#add_executable(1.5 "1/1.5/5.c")
#add_executable(1.6 "1/1.6/6.c")
#add_executable(1.7 "1/1.7/7.c")
#add_executable(1.8 "1/1.8/8.c")
#add_executable(1.9 "1/1.9/9.c")
#add_executable(1.10 "1/1.10/10.c")
#add_executable(1.11 "1/1.11/11.c")
#add_executable(1.12 "1/1.12/12.c")
#add_executable(1.13 "1/1.13/13.c")
#add_executable(1.14 "1/1.14/14.c")
#add_executable(1.15 "1/1.15/15.c")
#add_executable(1.Tin2.1 "1/Tinakov/2.1/2.1.c")
#add_executable(1.Tin2.2 "1/Tinakov/2.2/2.2.c")
#############################################

# 1 course / 2 semester

#add_executable(2.1 "2/2.1/master.c" 2/2.1/data.h )
#add_executable(2.1tn "2/2.1t/main.c" 2/2.1t/data.h)
#add_executable(2.1ch "2/2.1ch/index.c" 2/2.1ch/struct.h)
#add_executable(2.1g "2/2.1g/main.c" 2/2.1g/programs.h)
#add_executable(2_lab1_1_1 "2/Lab1/1.1.c")
#add_executable(2_lab1_1_2 "2/Lab1/1.2.c")
#add_executable(2_lab1_1_3 "2/Lab1/1.3.c")
#add_executable(2_lab1_2_1 "2/Lab1/2.1.c")
#add_executable(2_lab1_2_2 "2/Lab1/2.2.c")
#add_executable(2_lab1_2_3 "2/Lab1/2.3.c")
#add_executable(2_lab1_2_4 "2/Lab1/2.4.c")
#add_executable(2_lab1_3_1 "2/Lab1/3.1.c")
add_executable(2_lab1_3_2 "2/Lab1/3.2.c")

#############################################