cmake_minimum_required(VERSION 3.23)
project(NNTU C)

set(CMAKE_C_STANDARD 99)

#add_executable(test "1/1.Test/Test.c")
#add_executable(1.1 "1/1.1/1.c")
#add_executable(1.2 "1/1.2/2.c")
#add_executable(1.3 "1/1.3/3.c")
#add_executable(1.4 "1/1.4/4.c")
#add_executable(1.5 "1/1.5/5.c")
#add_executable(1.6 "1/1.6/6.c")
#add_executable(1.7 "1/1.7/7.c")
#add_executable(1.8 "1/1.8/8.c")
#add_executable(1.9 "1/1.9/9.c")
#add_executable(1.10 "1/1.10/10.c")
#add_executable(1.11 "1/1.11/11.c")
#add_executable(1.12 "1/1.12/12.c")
#add_executable(1.13 "1/1.13/13.c")
#add_executable(1.14 "1/1.14/14.c")
#add_executable(1.15 "1/1.15/15.c")
#add_executable(1.Tin2.1 "1/Tinakov/2.1/2.1.c")
#add_executable(1.Tin2.2 "1/Tinakov/2.2/2.2.c")
#############################################

add_executable(2.1 "2/2.1/1.c" "2/2.1/master.db")
add_library(sqlite3 "E:/Git/NNTU_INF/C/!Libraries/sqlite3/sqlite3.c")
target_link_libraries(2.1 sqlite3)